#203 КОНСТРУКТИВНАЯ/ДАТА